@@ -143,9 +143,9 @@ public class SerializerTest {
     assertEquals("DEFAULT_STRING_VALUE", testNode1.property(stringPropertyKey));
     assertEquals("DEFAULT_STRING_VALUE", testNode1.propertiesMap().get(stringPropertyKey));
     assertFalse(testNode1.get().propertiesMapForStorage().containsKey(stringPropertyKey));
-    assertEquals(new Long(-99l), testEdge.longProperty());
-    assertEquals(new Long(-99l), testEdge.property(longPropertyKey));
-    assertEquals(new Long(-99l), testEdge.propertiesMap().get(longPropertyKey));
+    assertEquals(Long.valueOf(-99l), testEdge.longProperty());
+    assertEquals(-99l, testEdge.property(longPropertyKey));
+    assertEquals(-99l, testEdge.propertiesMap().get(longPropertyKey));
     graph.close();
 
     // to verify that default property values are not serialized, we're reopening the graph with different `default value` settings
@@ -162,9 +162,9 @@ public class SerializerTest {
     assertEquals("NEW_DEFAULT_STRING_VALUE", n1Deserialized.property(stringPropertyKey));
     assertEquals("NEW_DEFAULT_STRING_VALUE", n1Deserialized.propertiesMap().get(stringPropertyKey));
     assertFalse(n1Deserialized.get().propertiesMapForStorage().containsKey(stringPropertyKey));
-    assertEquals(new Long(-49l), edge1Deserialized.longProperty());
-    assertEquals(new Long(-49l), edge1Deserialized.property(longPropertyKey));
-    assertEquals(new Long(-49l), edge1Deserialized.propertiesMap().get(longPropertyKey));
+    assertEquals(Long.valueOf(-49l), edge1Deserialized.longProperty());
+    assertEquals(-49l, edge1Deserialized.property(longPropertyKey));
+    assertEquals(-49l, edge1Deserialized.propertiesMap().get(longPropertyKey));
   }
 
   private NodeDeserializer newDeserializer(Graph graph) {
